2017-07-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add and publish new mingw32-isl-0.18 package set.

	* mingw32/mingw32-isl.xml: New package specification file.
	* mingw32/mingw32-package-list.xml (mingw32-isl): Register it.
	* common/issue.log mingw32/issue.log: Update accordingly.

2017-07-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade mingw32-binutils package to version 2.28-1.

	* mingw32/mingw32-binutils.xml: Add new release specifications.
	* common/issue.log mingw32/issue.log: Update accordingly.

2017-03-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish MinGW.org WSL-5.0 package set.

	* mingw32/mingw32-runtime.xml (mingwrt-5.0-dev, mingwrt-5.0-dll)
	(mingwrt-5.0-lic, mingwrt-5.0-man, w32api-5.0-dev): Add references.
	(libmingwex): New subpackage; define it, and add references for...
	(libmingwex-5.0-dev, libmingwex-5.0-dll-0): ...these components.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-12-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Replace potentially malformed GCC-5 package set.

	* mingw32/mingw32-gcc4.xml (all component packages): Add release
	references for version 5.3.0-3 packages; these replace the former
	version 5.3.0-2 packages, which may have been responsible for
	improperly resolved dynamic linking references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-10-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingwrt-3.22.4 patch release.

	* mingw32/mingw32-runtime.xml (mingwrt-3.22.3-dev)
	(mingwrt-3.22.4-dll, mingwrt-3.22.4-lic, mingwrt-3.22.4-man): Add
	component package release records.
	* common/issue.log mingw32/issue.log: Update accordingly.

2016-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingwrt-3.22.3 patch release.

	* mingw32/mingw32-runtime.xml (mingwrt-3.22.3-dev)
	(mingwrt-3.22.3-dll, mingwrt-3.22.3-lic, mingwrt-3.22.3-man): Add
	component package release records.