@@ -39,7 +39,7 @@
   21031079d59268339bfd7c6dc8239df214588bca 2013091501 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
   7b16c690a8b02106e7cc7abc6c6310fe30390683 2015090600 mingw32-gettext.xml
-  8272b6fc44a3e7766adec484742f007f28a39eaf 2013090900 mingw32-gmp.xml
+  fcbf62fef8e67d55800f9da9f6c99c3c934c4609 2017071600 mingw32-gmp.xml
   a8d68c6dfdea77d8a2a7fb899004955f51a5dbe1 2017071400 mingw32-isl.xml
   99e3ac0d2c743b0d927a4d89a3153a975d2bdf87 2012073100 mingw32-libarchive.xml
   e8392e268250e1bc37bc008e34c4c180cec4fdaa 2014042900 mingw32-libiconv.xml
@@ -51,7 +51,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   8d3a7125499a85916b53efb4c897ac907e2490ab 2015082000 mingw32-mpc.xml
   8a11de23e7a89fd11436bdf162ef90712f30101b 2013102300 mingw32-mpfr.xml
-  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2017071401 mingw32-package-list.xml
+  5c9570cce1ddd4fe275b83acbc06739a4361c26a 2017071600 mingw32-package-list.xml
   1f15439ee5f66ec22321c7aa853559b6f8f7172f 2015090800 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
