@@ -14,9 +14,8 @@
       <description lang="en" title="The GNU Multiple Precision Arithmetic Library" >
         <paragraph>
           GNU MP is a library for arbitrary precision arithmetic, operating on
-          signed integers, rational numbers, and floating point numbers.  It
-          has a rich set of functions, and the functions have a regular
-          interface.
+          signed integers, rational numbers, and floating point numbers.  It has
+          a rich set of functions, and the functions have a regular interface.
         </paragraph>
         <paragraph>
           The MinGW/MSYS project provides two gmp packages: the native win32
@@ -33,30 +32,33 @@
         </paragraph>
       </description>
 
-      <source tarname="gmp-%-mingw32-src.tar.lzma" />
-      <licence tarname="gmp-%-mingw32-lic.tar.lzma" />
+      <source tarname="gmp-%-mingw32-src.tar.%" />
+      <licence tarname="gmp-%-mingw32-lic.tar.%" />
 
       <component class="dev">
-	<release tarname="gmp-5.1.2-1-mingw32-dev.tar.lzma" >
-	  <requires eq="mingw32-libgmpxx-%-mingw32-dll-4.tar" />
-	</release>
-        <release tarname="gmp-5.0.1-1-mingw32-dev.tar.lzma" >
-          <requires eq="mingw32-libgmp-%-mingw32-dll-10.tar" />
-          <requires eq="mingw32-libgmpxx-%-mingw32-dll-4.tar" />
-        </release>
+        <release tarname="gmp-6.1.2-1-mingw32-dev.tar.xz" />
+        <release tarname="gmp-5.1.2-1-mingw32-dev.tar.lzma" />
+        <release tarname="gmp-5.0.1-1-mingw32-dev.tar.lzma" />
+        <requires eq="mingw32-libgmpxx-%-mingw32-dll-4.tar" />
+        <requires eq="mingw32-libgmp-%-mingw32-dll-10.tar" />
       </component>
 
       <component class="doc">
+        <release tarname="gmp-6.1.2-1-mingw32-doc.tar">
+          <download tarname="none" />
+        </release>
         <release tarname="gmp-5.1.2-1-mingw32-doc.tar.lzma" />
         <release tarname="gmp-5.0.1-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lic">
+        <release tarname="gmp-6.1.2-1-mingw32-lic.tar.xz" />
         <release tarname="gmp-5.1.2-1-mingw32-lic.tar.lzma" />
         <release tarname="gmp-5.0.1-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="info">
+        <release tarname="gmp-6.1.2-1-mingw32-info.tar.xz" />
         <release tarname="gmp-5.1.2-1-mingw32-info.tar.lzma" />
       </component>
     </package>
@@ -66,9 +68,8 @@
       <description lang="en" title="The GNU Multiple Precision Arithmetic Library" >
         <paragraph>
           GNU MP is a library for arbitrary precision arithmetic, operating on
-          signed integers, rational numbers, and floating point numbers.  It
-          has a rich set of functions, and the functions have a regular
-          interface.
+          signed integers, rational numbers, and floating point numbers.  It has
+          a rich set of functions, and the functions have a regular interface.
         </paragraph>
         <paragraph>
           The MinGW/MSYS project provides two libgmp packages: the native win32
@@ -88,13 +89,14 @@
         </paragraph>
       </description>
 
-      <source tarname="gmp-%-mingw32-src.tar.lzma" />
-      <licence tarname="gmp-%-mingw32-lic.tar.lzma" />
+      <source tarname="gmp-%-mingw32-src.tar.%" />
+      <licence tarname="gmp-%-mingw32-lic.tar.%" />
 
       <component class="dll">
-        <release tarname="libgmp-5.1.2-1-mingw32-dll-10.tar" >
-	  <download tarname="gmp-5.1.2-1-mingw32-dll.tar.lzma" />
-	</release>
+        <release tarname="libgmp-6.1.2-1-mingw32-dll-10.tar.xz" />
+        <release tarname="libgmp-5.1.2-1-mingw32-dll-10.tar">
+          <download tarname="gmp-5.1.2-1-mingw32-dll.tar.lzma" />
+        </release>
         <release tarname="libgmp-5.0.1-1-mingw32-dll-10.tar.lzma" />
       </component>
     </package>
@@ -104,9 +106,8 @@
       <description lang="en" title="The GNU Multiple Precision Arithmetic Library" >
         <paragraph>
           GNU MP is a library for arbitrary precision arithmetic, operating on
-          signed integers, rational numbers, and floating point numbers.  It
-          has a rich set of functions, and the functions have a regular
-          interface.
+          signed integers, rational numbers, and floating point numbers.  It has
+          a rich set of functions, and the functions have a regular interface.
         </paragraph>
         <paragraph>
           The mingw32-libgmpxx package provides the C++ runtime library.  The
@@ -116,20 +117,22 @@
         </paragraph>
       </description>
 
-      <source tarname="gmp-%-mingw32-src.tar.lzma" />
-      <licence tarname="gmp-%-mingw32-lic.tar.lzma" />
+      <source tarname="gmp-%-mingw32-src.tar.%" />
+      <licence tarname="gmp-%-mingw32-lic.tar.%" />
 
       <component class="dll">
-        <release tarname="libgmpxx-5.1.2-1-mingw32-dll-4.tar.lzma" >
-	  <download tarname="none" />
-          <requires eq="libgmp-%-mingw32-dll-10.tar" />
+        <release tarname="libgmpxx-6.1.2-1-mingw32-dll-4.tar.xz" />
+        <release tarname="libgmpxx-5.1.2-1-mingw32-dll-4.tar.lzma">
+          <download tarname="none" />
         </release>
-        <release tarname="libgmpxx-5.0.1-1-mingw32-dll-4.tar.lzma" >
-          <requires eq="libgmp-%-mingw32-dll-10.tar" />
-          <requires eq="libgcc-*-mingw32-dll-1.tar" />
-        </release>
+        <release tarname="libgmpxx-5.0.1-1-mingw32-dll-4.tar.lzma" />
+        <requires eq="libgmp-%-mingw32-dll-10.tar" />
+        <requires eq="libgcc-*-mingw32-dll-1.tar" />
       </component>
     </package>
+
   </package-collection>
 </software-distribution>
-<!-- vim: set nocompatible expandtab fileformat=unix textwidth=80 tabstop=2 shiftwidth=2: -->
+
+<!-- vim: set textwidth=80 tabstop=2 shiftwidth=2 expandtab: -->
+<!-- vim: set fileformat=unix nocompatible: -->
